商品列表查询类接口分离,完善单元测试
