# src/modules/shop/dtos/get-items.response.ts
@@ -15,9 +15,6 @@ export class GetItemsResponseDto {
     @ApiProperty({ description: '商品名称' })
     name: string;
 
-    @ApiProperty({ description: '商品描述' })
-    description: string;
-
     @ApiProperty({ description: '商品价格' })
     price: number;
 
@@ -25,12 +22,5 @@ export class GetItemsResponseDto {
         description: '商品封面文件名',
         type: PhotoInfoDto
     })
-    coverPhoto: string;
-
-    @ApiProperty({
-        description: '商品照片',
-        type: PhotoInfoDto,
-        isArray: true
-    })
-    photos: PhotoInfoDto[];
+    coverPhoto: PhotoInfoDto;
 }
